# lotus

./: .gitignore  .gitmodules  .patchew.yml  README.md  configure  meson.build  qemu-options.hx  qemu.nsi
.gitlab-ci.d/: buildtest.yml
.gitlab-ci.d/cirrus/: kvm-build.yml
.gitlab/issue_templates/: bug.md
docs/: COLO-FT.txt  bypass-iommu.txt  confidential-guest-support.txt  defs.rst.inc  hyperv.txt  multi-thread-compression.txt  replay.txt
docs/config/: mach-virt-graphical.cfg  mach-virt-serial.cfg  q35-emulated.cfg  q35-virtio-graphical.cfg  q35-virtio-serial.cfg
docs/devel/: blkdebug.txt  blkverify.txt  build-system.rst  migration.rst  multi-process.rst  qgraph.rst  tcg-plugins.rst  testing.rst  writing-monitor-commands.rst
docs/specs/: ppc-spapr-hcalls.rst  tpm.rst
docs/system/: cpu-hotplug.rst  multi-process.rst  pr-manager.rst  target-arm.rst  target-avr.rst  target-m68k.rst  target-mips.rst  target-ppc.rst  target-riscv.rst  target-rx.rst  target-s390x.rst  target-sparc.rst  target-sparc64.rst  target-xtensa.rst
hw/arm/: gumstix.c
hw/core/: qdev-properties-system.c
hw/misc/: pc-testdev.c
include/crypto/: tlscredsanon.h  tlscredspsk.h  tlscredsx509.h
qapi/: machine.json
roms/skiboot/: README.md
roms/vbootrom/: README.md
scripts/: cpu-x86-uarch-abi.py  device-crash-test  nsis.py  qemu-trace-stap
tcg/tci/: README
tests/: check-block.sh
tests/multiboot/: aout_kludge.out  run_test.sh
tests/qemu-iotests/: 300  meson.build  testenv.py
tests/qtest/: libqtest.c  meson.build  (+1 more)
ui/: cocoa.m  gtk.c  sdl2.c
ui/icons/: Makefile  meson.build
(+60 files in other folders)
